kitty custom parameters

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Ubuntu Mono
+bold_font        Ubuntu Mono Bold
+italic_font      Ubuntu Mono Italic
+bold_italic_font Ubuntu Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -47,7 +47,7 @@
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  0
+adjust_line_height  -1
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -151,7 +151,7 @@
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline)
 
@@ -170,7 +170,7 @@
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -232,8 +232,8 @@
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #ffffff
+url_style single
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
@@ -343,7 +343,7 @@
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -383,7 +383,7 @@
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts splits,fat,tall,vertical,horizontal,grid
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -436,7 +436,7 @@
 #: the vertical and horizontal sides. Three values set top, horizontal
 #: and bottom. Four values set top, right, bottom and left.
 
-# placement_strategy center
+# placement_strategy top-left
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
@@ -459,7 +459,7 @@
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.5
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -580,7 +580,7 @@
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+background_opacity 0.85
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -686,6 +686,32 @@
 
 #: white
 
+################ gruvbox_dark
+
+background            #282828
+foreground            #ebdbb2
+cursor                #928374
+selection_foreground  #928374
+selection_background  #3c3836
+color0                #282828
+color8                #928374
+color1                #cc241d
+color9                #fb4934
+color2                #98971a
+color10               #b8bb26
+color3                #d79921
+color11               #fabd2d
+color4                #458588
+color12               #83a598
+color5                #b16286
+color13               #d3869b
+color6                #689d6a
+color14               #8ec07c
+color7                #a89984
+color15               #928374
+
+################ gruvbox_dark
+
 # mark1_foreground black
 
 #: Color for marks of type 1
@@ -722,7 +748,7 @@
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
-# editor .
+editor vim
 
 #: The console editor to use when editing the kitty config file or
 #: similar tasks. A value of . means to use the environment variables
@@ -1078,6 +1104,16 @@
 # map kitty_mod+8 eighth_window
 # map kitty_mod+9 ninth_window
 # map kitty_mod+0 tenth_window
+
+map ctrl+up     neighboring_window up
+map ctrl+left   neighboring_window left
+map ctrl+right  neighboring_window right
+map ctrl+down   neighboring_window down
+
+map shift+up    move_window up
+map shift+left  move_window left
+map shift+right move_window right
+map shift+down  move_window down
 #: }}}
 
 #: Tab management {{{
@@ -1111,12 +1147,21 @@
 
 #: You can also create shortcuts to switch to specific layouts::
 
-#:     map ctrl+alt+t goto_layout tall
+map ctrl+alt+t goto_layout tall
+map ctrl+alt+f goto_layout fat
+map ctrl+alt+v goto_layout vertical
+map ctrl+alt+h goto_layout horizonal
+map ctrl+alt+g goto_layout grid
 #:     map ctrl+alt+s goto_layout stack
 
 #: Similarly, to switch back to the previous layout::
 
 #:    map ctrl+alt+p last_used_layout
+
+map ctrl+F2  launch --location=vsplit
+map shift+F2 launch --location=hsplit
+map F2       layout_action rotate
+
 #: }}}
 
 #: Font sizes {{{
@@ -1124,8 +1169,8 @@
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-# map kitty_mod+equal     change_font_size all +2.0
-# map kitty_mod+minus     change_font_size all -2.0
+map kitty_mod+equal     change_font_size all +1.0
+map kitty_mod+minus     change_font_size all -1.0
 # map kitty_mod+backspace change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
