--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ BORDER_COLOR="#fe8019"
 
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ",tmux-256color-italic:Tc,xterm-256color-italic:Tc"
+set -sa terminal-overrides ',alacritty:RGB'
 
 set -s focus-events on
 
