--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,21 @@
 [core]
     editor = vim
     excludesfile = ~/.git_ignore
+    pager = "diff-so-fancy | less --tabs=4 -RFX"
+[color]
+    ui = true
+[color "diff-highlight"]
+    oldNormal = red bold
+    oldHighlight = red bold 52
+    newNormal = green bold
+    newHighlight = green bold 22
+[color "diff"]
+    meta = 11
+    frag = magenta bold
+    commit = yellow bold
+    old = red bold
+    new = green bold
+    whitespace = red reverse
 [init]
     templatedir = ~/.git_template
 [diff]
