--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,11 +45,11 @@ setw -g aggressive-resize on
 
 ### STYLE #####################################################################
 
-set -g status-right '%d.%m.%Y %H:%M:%S'
+set -g status-right '%d.%m.%Y %H:%M:%S '
 set -g status-right-style default
 set -g status-style 'fg=#eeeeee,bg=#282828'
 
-set -g window-status-current-style 'fg=black,bg=#eeeeee'
+set -g window-status-current-style 'fg=#282828,bg=#eeeeee'
 
 set -g window-active-style 'fg=default,bg=#282828'
 
@@ -67,7 +67,7 @@ bind       C-a       send-prefix
 
 bind -n    M-r       source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-bind -n    M-n       command-prompt -p "rename-window:" "rename-window '%%'"
+bind -n    F8        command-prompt -p "rename-window:" "rename-window '%%'"
 
 bind -n    M-h       new-window -n help "less /home/ididitbad/Documents/help.tmux.txt"
 
