--- a/byobu/.byobu/.tmux.conf
+++ b/byobu/.byobu/.tmux.conf
@@ -1,4 +1,7 @@
 
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ",tmux-256color-italic:Tc,xterm-256color-italic:Tc"
+
 set -g window-active-style 'fg=default,bg=#282828'
 set -g pane-border-style   'fg=colour5,bg=default'
 set -g renumber-windows on
