--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,8 @@
 # run-shell 'export BORDER_COLOR="$(openssl rand -hex 3 || hexdump -n 3 -v -e \'3/1 "%02x" "\n"\' /dev/urandom || echo blue)"'
 BORDER_COLOR="#fe8019"
 
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ",tmux-256color-italic:Tc,xterm-256color-italic:Tc"
 
 set -s focus-events on
 
